Fixed add allowance button alignment.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -829,11 +829,11 @@ tr:nth-child(odd) > td.first-budget {
 
 .budget-btn{
   background-color: #FCB401;
-  width: 40%;
+  width: auto;
   height: 65%;
   border-radius: 100px;
-  margin-left: 5%;
-  margin-right: 15%;
+  margin: 0 auto;
+  margin-left: 15%;
   margin-top: 4%;
   text-align: center;
   font-size: 24px;
@@ -845,19 +845,17 @@ tr:nth-child(odd) > td.first-budget {
 
 .allowance-btn{
   background-color: #FCB401;
-  width: 40%;
+  width: auto;
   height: 65%;
   border-radius: 100px;
-  margin-left: 50%;
-  margin-right: 15%;
+  margin-left: 5%;
   margin-top: 4%;
   text-align: center;
   font-size: 24px;
   border: none;
   color: black;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-  position: relative;
-  bottom: 102px;
+  display: inline-block;
 }
 
 .button-txt {
